--- a/app/src/main/res/drawable-v24/gradient_white.xml
+++ b/app/src/main/res/drawable-v24/gradient_white.xml
@@ -4,8 +4,8 @@
     <gradient
         android:angle="90"
         android:endColor="#fdfbfb"
-        android:centerColor="#f2f9fc"
-        android:startColor="#ebfffb"
+        android:centerColor="#fdfbfb"
+        android:startColor="#f7fcff"
 
          />
 
