--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,7 @@
             android:layout_gravity="start"
             android:fitsSystemWindows="true"
             app:headerLayout="@layout/nav_header_main"
+            app:itemTextAppearance="@style/item_text"
             app:menu="@menu/drawer" />
 
     </androidx.drawerlayout.widget.DrawerLayout>
