--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -3,14 +3,13 @@
 
     <item
         android:id="@+id/item1"
-        android:icon="@mipmap/ic_launcher_round"
-        android:title="item1"
-        />
+        android:icon="@mipmap/menu"
+        android:title="마이페이지" />
 
     <item
         android:id="@+id/item2"
         android:icon="@mipmap/ic_launcher_round"
-        android:title="item2"
+        android:title="환경설정"
         />
 
     <item
