--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/item1"
-        android:icon="@mipmap/menu"
+        android:icon="@mipmap/ic_launcher"
         android:title="마이페이지" />
 
     <item
