--- a/app/src/main/res/layout/fragment_face_recognition.xml
+++ b/app/src/main/res/layout/fragment_face_recognition.xml
@@ -18,6 +18,7 @@
             android:layout_marginTop="68dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.494"
+            android:src="@drawable/an"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
