스플래시, 아이콘 추가 & 사용자 목록 ui 수정

--- a/app/src/main/res/layout/activity_mypage.xml
+++ b/app/src/main/res/layout/activity_mypage.xml
@@ -133,7 +133,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/iv"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/edit" />
+        app:layout_constraintTop_toTopOf="parent"/>
+       <!-- app:srcCompat="@drawable/edit"-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
