--- a/app/src/main/res/layout/fragment_cctv.xml
+++ b/app/src/main/res/layout/fragment_cctv.xml
@@ -10,31 +10,30 @@
     <ScrollView
         android:id="@+id/scrollView2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:fillViewport="true">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <Button
-                android:id="@+id/button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="새로고침" />
-
-            <Button
-                android:id="@+id/alarm"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="알림" />
+            <ImageButton
+                android:id="@+id/refreshButton3"
+                android:layout_width="40dp"
+                android:layout_height="30dp"
+                android:layout_gravity="right"
+                android:layout_marginLeft="2dp"
+                android:layout_marginTop="1dp"
+                android:layout_marginRight="10dp"
+                android:background="#00FFFFFF"
+                android:scaleType="fitCenter"
+                android:src="@drawable/refresh_button" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerview"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="76dp" />
-
+                android:layout_height="wrap_content" />
 
 
         </LinearLayout>
