--- a/app/src/main/res/layout/fragment_face_recognition.xml
+++ b/app/src/main/res/layout/fragment_face_recognition.xml
@@ -54,8 +54,10 @@
 
                 <ImageButton
                     android:id="@+id/refreshButton"
-                    android:layout_width="70dp"
-                    android:layout_height="40dp"
+                    android:layout_width="40dp"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="2dp"
+                    android:layout_marginTop="1dp"
                     android:background="#00FFFFFF"
                     android:scaleType="fitCenter"
                     android:src="@drawable/refresh_button" />
