--- a/app/src/main/res/layout/list_visitors.xml
+++ b/app/src/main/res/layout/list_visitors.xml
@@ -12,10 +12,11 @@
 
         <ImageView
             android:id="@+id/profile"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:layout_margin="5dp"
-            android:src="@mipmap/ic_launcher_round"/>
+            android:background="@drawable/round"
+            android:src="@mipmap/ic_launcher_round" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -26,9 +27,13 @@
             <TextView
                 android:id="@+id/time"
                 android:layout_width="match_parent"
-                android:layout_height="80dp"
-                android:layout_margin="20dp"
-                android:text="시간">
+                android:layout_height="120dp"
+                android:layout_margin="5dp"
+                android:fontFamily="@font/dream5"
+                android:gravity="center_vertical"
+
+                android:text="2021/05/04 16:34:24"
+                android:textSize="15dp">
 
             </TextView>
         </LinearLayout>
