--- a/app/src/main/res/layout/list_visitors.xml
+++ b/app/src/main/res/layout/list_visitors.xml
@@ -8,6 +8,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="5dp"
+        android:background="@drawable/rectangle_border"
         android:orientation="horizontal">
 
         <ImageView
@@ -22,20 +24,28 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
+            android:layout_marginTop="50dp"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/time"
                 android:layout_width="match_parent"
-                android:layout_height="120dp"
-                android:layout_margin="5dp"
-                android:fontFamily="@font/dream5"
-                android:gravity="center_vertical"
+                android:layout_height="wrap_content"
 
+                android:fontFamily="@font/dream6"
+                android:gravity="center_vertical"
                 android:text="2021/05/04 16:34:24"
-                android:textSize="15dp">
+                android:textSize="16dp">
 
             </TextView>
+
+            <TextView
+                android:id="@+id/textView9"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/dream5"
+                android:text="출입을 감지했습니다."
+                android:textSize="15dp" />
         </LinearLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
