--- a/app/src/main/res/layout/activity_user_register.xml
+++ b/app/src/main/res/layout/activity_user_register.xml
@@ -6,17 +6,17 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:visibility="visible"
-    tools:context=".Face">
+    tools:context=".UserRegisterActivity">
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="316dp"
-        android:layout_height="371dp"
-        android:layout_marginTop="30dp"
+        android:layout_width="300dp"
+        android:layout_height="350dp"
+        android:layout_marginTop="108dp"
         android:autofillHints="사진을 찍어주세요"
         android:background="@drawable/frame"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />
 
@@ -32,17 +32,18 @@
         app:layout_constraintStart_toStartOf="@+id/image"
         app:layout_constraintTop_toTopOf="@+id/image" />
 
+
     <ImageButton
         android:id="@+id/take_picture"
         android:layout_width="43dp"
         android:layout_height="43dp"
+        android:layout_marginTop="12dp"
         android:background="@drawable/camera"
         android:fontFamily="@font/dream6"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/image" />
-
 
     <Button
         android:id="@+id/bt_upload"
@@ -77,8 +78,8 @@
         android:id="@+id/textView4"
         android:layout_width="55dp"
         android:layout_height="36dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="54dp"
         android:fontFamily="@font/dream6"
         android:text="이름"
         android:textAlignment="center"
@@ -86,22 +87,23 @@
         android:textSize="23dp"
         android:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/take_picture" />
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />
 
     <EditText
         android:id="@+id/edit_name"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="47dp"
         android:ems="10"
         android:fontFamily="@font/dream3"
         android:hint="이름을 입력해주세요"
         android:inputType="textPersonName"
+        android:paddingBottom="10dp"
         android:selectAllOnFocus="true"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.257"
+        app:layout_constraintHorizontal_bias="0.282"
         app:layout_constraintStart_toEndOf="@+id/textView4"
-        app:layout_constraintTop_toBottomOf="@+id/take_picture" />
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />
 
     <Button
         android:id="@+id/bt_cancel"
