--- a/app/src/main/res/layout/fragment_user_management.xml
+++ b/app/src/main/res/layout/fragment_user_management.xml
@@ -7,7 +7,7 @@
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragment_FaceRecognition">
+    tools:context=".Fragment_userManagement">
 
     <ScrollView
         android:layout_width="match_parent"
